# lv-windows

./: CONFIG  Makefile  README  README.ja  hello.sample  help.ja  index.html  lv.1  lv.hlp  relnote.html
src/: Makefile  Makefile.dos  Makefile.in  Makefile.win  ascii.h  attr.h  begin.h  big5.c  big5.h  big5.map  big5.rev  big5cns.map  big5cns.pl  big5cns1.map  big5cns2.map  boolean.h  cns1big5.map  cns2big5.map  cnsbig5.pl  command.c  command.h  conf.c  conf.h  configure  configure.in  console.c  console.h  conv.c  conv.h  ctable.c  ctable.h  ctable_e.h  ctable_t.h  d2u.pl  d2uall.sh  decode.c  decode.h  dfa.c  dfa.h  display.c  (+113 more)
